--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,230 @@
-<p>home works!</p>
+<cdk-accordion class="accordion">
+    <cdk-accordion-item
+        #accordionItem="cdkAccordionItem"
+        class="accordion-item"
+        role="button"
+        tabindex="0"
+        [attr.id]="'accordion-header-0'"
+        [attr.aria-expanded]="accordionItem.expanded"
+        [attr.aria-controls]="'accordion-body-0'">
+        <div class="accordion-item-header" (click)="accordionItem.toggle()">
+        Liste der verfügbaren Autobahnen zurück.
+          <span class="accordion-item-description">
+            Click to {{ accordionItem.expanded ? 'close' : 'open' }}
+          </span>
+        </div>
+        <div
+          class="accordion-item-body"
+          role="region"
+          [style.display]="accordionItem.expanded ? '' : 'none'"
+          [attr.id]="'accordion-body-0'"
+          [attr.aria-labelledby]="'accordion-header-0'">
+          <ol>
+            @for (road of roads; track road; let index = $index) {
+                <li>{{road}}</li>
+            }
+          </ol>
+        </div>
+    </cdk-accordion-item>
+
+    <cdk-accordion-item
+        #accordionItem1="cdkAccordionItem"
+        class="accordion-item"
+        role="button"
+        tabindex="1"
+        [attr.id]="'accordion-header-1'"
+        [attr.aria-expanded]="accordionItem1.expanded"
+        [attr.aria-controls]="'accordion-body-1'">
+        <div class="accordion-item-header" (click)="accordionItem1.toggle()">
+            Liste der aktuellen Baustellen zu einer Autobahn zurück.
+          <span class="accordion-item-description">
+            Click to {{ accordionItem1.expanded ? 'close' : 'open' }}
+          </span>
+        </div>
+        <div
+          class="accordion-item-body"
+          role="region"
+          [style.display]="accordionItem1.expanded ? '' : 'none'"
+          [attr.id]="'accordion-body-1'"
+          [attr.aria-labelledby]="'accordion-header-1'">
+          <ol>
+            @for (road of roads; track road; let index = $index) {
+                <li>{{road}}</li>
+            }
+          </ol>
+        </div>
+    </cdk-accordion-item>
+
+    <cdk-accordion-item
+        #accordionItem2="cdkAccordionItem"
+        class="accordion-item"
+        role="button"
+        tabindex="2"
+        [attr.id]="'accordion-header-2'"
+        [attr.aria-expanded]="accordionItem2.expanded"
+        [attr.aria-controls]="'accordion-body-2'">
+        <div class="accordion-item-header" (click)="accordionItem2.toggle()">
+            Liste der Webcams zu einer Autobahn zurück.
+          <span class="accordion-item-description">
+            Click to {{ accordionItem2.expanded ? 'close' : 'open' }}
+          </span>
+        </div>
+        <div
+          class="accordion-item-body"
+          role="region"
+          [style.display]="accordionItem2.expanded ? '' : 'none'"
+          [attr.id]="'accordion-body-2'"
+          [attr.aria-labelledby]="'accordion-header-2'">
+          <ol>
+            @for (road of roads; track road; let index = $index) {
+                <li>{{road}}</li>
+            }
+          </ol>
+        </div>
+    </cdk-accordion-item>
+    
+    <cdk-accordion-item
+        #accordionItem3="cdkAccordionItem"
+        class="accordion-item"
+        role="button"
+        tabindex="3"
+        [attr.id]="'accordion-header-3'"
+        [attr.aria-expanded]="accordionItem3.expanded"
+        [attr.aria-controls]="'accordion-body-3'">
+        <div class="accordion-item-header" (click)="accordionItem3.toggle()">
+            Liste der Rastplätze zu einer Autobahn zurück.
+          <span class="accordion-item-description">
+            Click to {{ accordionItem3.expanded ? 'close' : 'open' }}
+          </span>
+        </div>
+        <div
+          class="accordion-item-body"
+          role="region"
+          [style.display]="accordionItem3.expanded ? '' : 'none'"
+          [attr.id]="'accordion-body-3'"
+          [attr.aria-labelledby]="'accordion-header-3'">
+          <ol>
+            @for (road of roads; track road; let index = $index) {
+                <li>{{road}}</li>
+            }
+          </ol>
+        </div>
+    </cdk-accordion-item>
+
+    <cdk-accordion-item
+        #accordionItem4="cdkAccordionItem"
+        class="accordion-item"
+        role="button"
+        tabindex="4"
+        [attr.id]="'accordion-header-4'"
+        [attr.aria-expanded]="accordionItem4.expanded"
+        [attr.aria-controls]="'accordion-body-4'">
+        <div class="accordion-item-header" (click)="accordionItem4.toggle()">
+            Liste der Verkehrsmeldungen zu einer Autobahn zurück.
+          <span class="accordion-item-description">
+            Click to {{ accordionItem4.expanded ? 'close' : 'open' }}
+          </span>
+        </div>
+        <div
+          class="accordion-item-body"
+          role="region"
+          [style.display]="accordionItem4.expanded ? '' : 'none'"
+          [attr.id]="'accordion-body-4'"
+          [attr.aria-labelledby]="'accordion-header-4'">
+          <ol>
+            @for (road of roads; track road; let index = $index) {
+                <li>{{road}}</li>
+            }
+          </ol>
+        </div>
+    </cdk-accordion-item> 
+
+    <cdk-accordion-item
+        #accordionItem5="cdkAccordionItem"
+        class="accordion-item"
+        role="button"
+        tabindex="5"
+        [attr.id]="'accordion-header-5'"
+        [attr.aria-expanded]="accordionItem5.expanded"
+        [attr.aria-controls]="'accordion-body-5'">
+        <div class="accordion-item-header" (click)="accordionItem5.toggle()">
+            Liste der Sperrungen zu einer Autobahn zurück.
+          <span class="accordion-item-description">
+            Click to {{ accordionItem5.expanded ? 'close' : 'open' }}
+          </span>
+        </div>
+        <div
+          class="accordion-item-body"
+          role="region"
+          [style.display]="accordionItem5.expanded ? '' : 'none'"
+          [attr.id]="'accordion-body-5'"
+          [attr.aria-labelledby]="'accordion-header-5'">
+          <ol>
+            @for (road of roads; track road; let index = $index) {
+                <li>{{road}}</li>
+            }
+          </ol>
+        </div>
+    </cdk-accordion-item> 
+
+    <cdk-accordion-item
+        #accordionItem6="cdkAccordionItem"
+        class="accordion-item"
+        role="button"
+        tabindex="6"
+        [attr.id]="'accordion-header-6'"
+        [attr.aria-expanded]="accordionItem6.expanded"
+        [attr.aria-controls]="'accordion-body-6'">
+        <div class="accordion-item-header" (click)="accordionItem6.toggle()">
+            Liste der Ladestationen zu einer Autobahn zurück.
+          <span class="accordion-item-description">
+            Click to {{ accordionItem6.expanded ? 'close' : 'open' }}
+          </span>
+        </div>
+        <div
+          class="accordion-item-body"
+          role="region"
+          [style.display]="accordionItem6.expanded ? '' : 'none'"
+          [attr.id]="'accordion-body-6'"
+          [attr.aria-labelledby]="'accordion-header-6'">
+          <ol>
+            @for (road of roads; track road; let index = $index) {
+                <li>{{road}}</li>
+            }
+          </ol>
+        </div>
+    </cdk-accordion-item> 
+
+
+    
+
+    <!-- @for (item of items; track item; let index = $index) {
+      <cdk-accordion-item
+  
+        #accordionItem="cdkAccordionItem"
+        class="accordion-item"
+        role="button"
+        tabindex="0"
+        [attr.id]="'accordion-header-' + index"
+        [attr.aria-expanded]="accordionItem.expanded"
+        [attr.aria-controls]="'accordion-body-' + index">
+        <div class="accordion-item-header" (click)="accordionItem.toggle()">
+          {{ item }}
+          <span class="accordion-item-description">
+            Click to {{ accordionItem.expanded ? 'close' : 'open' }}
+          </span>
+        </div>
+        <div
+          class="accordion-item-body"
+          role="region"
+          [style.display]="accordionItem.expanded ? '' : 'none'"
+          [attr.id]="'accordion-body-' + index"
+          [attr.aria-labelledby]="'accordion-header-' + index">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis
+          excepturi incidunt ipsum deleniti labore, tempore non nam doloribus blanditiis
+          veritatis illo autem iure aliquid ullam rem tenetur deserunt velit culpa?
+        </div>
+      </cdk-accordion-item>
+    } -->
+
+</cdk-accordion>
